update to make properties work

--- a/component/index.html
+++ b/component/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>promptchart Demo</title>
+    <title>PromptChart Demo</title>
     <style>
       * {
         box-sizing: border-box;
@@ -113,11 +113,6 @@
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
       }
 
-      prompt-chart {
-        height: 400px;
-        display: block;
-      }
-
       .metadata {
         margin-top: 16px;
         padding-top: 16px;
@@ -164,7 +159,7 @@
     </div>
 
     <div class="chart-section">
-      <prompt-chart id="chart" demo="true"></prompt-chart>
+      <prompt-chart id="chart" demo="true" style="height: 400px; display: block"></prompt-chart>
 
       <div class="metadata" id="metadata" style="display: none">
         <span class="metadata-item">
